--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>0</h1>
-    <button>+</button>
-    <button>reset</button>
-    <button>-</button>
+    <button class="increase">+</button>
+    <button class="reset">reset</button>
+    <button class="decrease">-</button>
 </body>
+<script src="main.js"></script>
 </html>
